Fix pagination on small devices

--- a/src/styl/_pagination.styl
+++ b/src/styl/_pagination.styl
@@ -1,6 +1,7 @@
 .pagination
-    center(rem(1030px))
+    max-width rem(1030px)
     text-align center
+    width 100%
 
     a.next,
     a.previous
@@ -11,7 +12,6 @@
         font-size: rem(20px)
         height: 40px
         line-height 40px
-        margin: 0 15px
         text-decoration none
         width: 40px
 
@@ -19,3 +19,4 @@
         color #576366
         font-size rem(16px)
         line-height rem(22px)
+        margin 0 rem(10px)
